<resources>
    <string name="app_name">MY SKIN</string>
    <string name="title">MY SKIN</string>
    <string name="sub_title">Facial Skin Health App</string>
    <string name="next">Next</string>
    <string name="title_ob1">ABOUT APPS</string>
    <string name="title_ob2">TOP FEATURES</string>
    <string name="title_ob3">FACIAL HEALTH SOLUTION</string>
    <string name="sub_ob1">Facial Skin Healthcare</string>
    <string name="sub_ob2">Real Time Scanner</string>
    <string name="sub_ob3">Facial Treatment Reccomendation</string>
    <string name="trending">Top Trending News</string>
    <string name="tips_trick">Tips on Taking Care Your Facial Skin</string>
    <string name="readmore">View More</string>
    <string name="toner">Toner</string>
    <string name="sun_screen">Sun Screen</string>
    <string name="serum">Serum</string>
    <string name="moist">Moisturizer</string>
    <string name="tonertl">TONER</string>
    <string name="sun_screentl">SUN SCREEN</string>
    <string name="serumtl">SERUM</string>
    <string name="moisttl">MOISTURIZER</string>
    <string name="product">PRODUCT</string>
    <string name="news_detail">NEWS</string>
    <string name="about_us">ABOUT US</string>
    <string name="camera">camera</string>
    <string name="galeri">Galeri</string>
    <string name="ambil_gambar_dari">Ambil Gambar Dari :</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="version_1_6_22">Version 1.6.22</string>
    <string name="copyrigth_2022_c22_ps341">Copyrigth @2022 C22-PS341</string>
    <string name="about2">ABOUT</string>
    <string name="help2">HELP</string>
    <string name="restricted">Tidak mendapatkan permission.</string>
    <string name="cam_error">Gagal mengambil gambar</string>
    <string name="cam_fail">Gagal memunculkan kamera</string>
</resources>